force-app/main/default/objects/SFSSDupeCatcher__Duplicate_Warning__c/fields/SFSSDupeCatcher__Scenario__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario__c</fullName>
    <description>This field links the duplicate alert to its parent Filter.</description>
    <inlineHelpText>The Filter that is associated with this alert record.</inlineHelpText>
    <label>Filter</label>
    <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
    <relationshipLabel>DupeCatcher Duplicate Alerts</relationshipLabel>
    <relationshipName>Duplicate_Warnings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>