force-app/main/default/objects/SFSSDupeCatcher__Duplicate_Warning__c/fields/SFSSDupeCatcher__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
    <description>The filter type of the parent filter.  This always matches the parent filter.</description>
    <inlineHelpText>The type of record matching that triggered the duplicate alert.  This value always matches the filter type of the parent filter.</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead to Contact</fullName>
            </value>
            <value>
                <fullName>Lead to Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>