force-app/main/default/objects/SFSSDupeCatcher__Duplicate_Warning__c/fields/SFSSDupeCatcher__Triggering_Action__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Triggering_Action__c</fullName>
    <description>This is the triggering action of the parent filter.  It always matches the triggering action of the parent.</description>
    <inlineHelpText>Shows whether this warning was triggered on an insert or an update.</inlineHelpText>
    <label>Triggering Action</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>