force-app/main/default/objects/SFSSDupeCatcher__Duplicate_Warning__c/listViews/SFSSDupeCatcher__All.listView-meta.xml
<ListView>
    <fullName>SFSSDupeCatcher__All</fullName>
    <columns>NAME</columns>
    <columns>SFSSDupeCatcher__Scenario__c</columns>
    <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
    <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>