force-app/main/default/objects/SFSSDupeCatcher__Duplicate_Warning__c/listViews/SFSSDupeCatcher__All_Account_Warnings.listView-meta.xml
<ListView>
    <fullName>SFSSDupeCatcher__All_Account_Warnings</fullName>
    <columns>NAME</columns>
    <columns>SFSSDupeCatcher__Scenario__c</columns>
    <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
    <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFSSDupeCatcher__Scenario_Type__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>All Account Warnings</label>
</ListView>